fix remix company-ticket spacing

--- a/src/conferences/remix/sass/components/_company-ticket.sass
+++ b/src/conferences/remix/sass/components/_company-ticket.sass
@@ -30,7 +30,6 @@
 		display: flex
 		margin: 0 auto
 		gap: 20px 76px
-		margin-bottom: clamp(40px, 8vw, 100px)
 
 		+sm
 			flex-direction: column-reverse
